Complete objective refactor of common module