@@ -20,6 +20,7 @@ import static es.urjc.etsii.grafo.algorithms.FMode.MINIMIZE;
 import static org.junit.jupiter.api.Assertions.*;
 
 class GRASPConstructiveMinimizingTest {
+    private final Objective<TestMove,TestSolution,TestInstance> minObj = Objective.ofMinimizing("TestMin", TestSolution::getScore, TestMove::getValue);
 
     TestGRASPListManager listManager;
     List<TestMove> moves;
@@ -43,8 +44,8 @@ class GRASPConstructiveMinimizingTest {
                 new TestMove(this.solution, 7, MINIMIZE)
         ));
         this.listManager = new TestGRASPListManager(this.moves);
-        this.gr = new GreedyRandomGRASPConstructive<>(Objective.ofDefaultMinimize(), listManager, ()  -> 0, "Fixed{0}");
-        this.rg = new RandomGreedyGRASPConstructive<>(Objective.ofDefaultMinimize(), listManager, ()  -> 0, "Fixed{0}");
+        this.gr = new GreedyRandomGRASPConstructive<>(minObj, listManager, ()  -> 0, "Fixed{0}");
+        this.rg = new RandomGreedyGRASPConstructive<>(minObj, listManager, ()  -> 0, "Fixed{0}");
 
     }
 
@@ -57,7 +58,7 @@ class GRASPConstructiveMinimizingTest {
         assertTrue(this.listManager.calledBefore);
         assertTrue(this.listManager.calledAfter);
         assertEquals(this.moves.size(), this.listManager.nCalls);
-        var moves = builtSolution.lastExecutesMoves();
+        var moves = (List<TestMove>) (Object) builtSolution.lastExecutesMoves();
         // Verify that moves are executed in decreasing score order, as grasp is run with alpha 0 = greedy
         ascending(moves);
     }
@@ -71,15 +72,15 @@ class GRASPConstructiveMinimizingTest {
         assertTrue(this.listManager.calledBefore);
         assertTrue(this.listManager.calledAfter);
         assertEquals(this.moves.size(), this.listManager.nCalls);
-        var moves = builtSolution.lastExecutesMoves();
+        var moves = (List<TestMove>) (Object) builtSolution.lastExecutesMoves();
         // Verify that moves are executed in decreasing score order, as grasp is run with alpha 0 = greedy
         ascending(moves);
     }
 
-    private void ascending(List<Move<? extends Solution<TestSolution, TestInstance>, TestInstance>> moves){
-        double last = moves.get(0).getValue();
+    private void ascending(List<TestMove> moves){
+        double last = minObj.evalMove(moves.getFirst());
         for (int i = 1; i < moves.size(); i++) {
-            double current = moves.get(i).getValue();
+            double current = minObj.evalMove(moves.get(i));
             assertTrue(DoubleComparator.isGreaterOrEquals(current, last));
             last = current;
         }
